--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
+    "sweetalert2": "^11.22.0",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
